packages/typ/tests/fixtures/diagnostics/0081_core_if_branch_mismatch_07.ml.expected
File "0081_core_if_branch_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0081_core_if_branch_mismatch_07 is not a valid module name.

File "0081_core_if_branch_mismatch_07.ml", line 1, characters 28-33:
1 | let _ = if true then 6 else false
                                ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
