packages/typ/tests/fixtures/diagnostics/0081_core_if_branch_mismatch_07.ml
let _ = if true then 6 else false
